[tool.poetry]
name = "flask1"
version = "0.1.0"
description = ""
authors = ["pavel <pav.ivanou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
connexion = {version = "^2.14.2", extras = ["swagger-ui"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
